--- a/aprendiendo-php/18-formularios/formulario.html
+++ b/aprendiendo-php/18-formularios/formulario.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>Formulario PHP</h1>
-  <form action="guardar.php" method="get">
+  <form action="guardar.php" method="post">
     Titulo: <br>
      <input type="text" name="titulo" ><br>
      Descripcion: <br>
